--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.31", features = ["std"] }
+clap = "4.4.12"
 reqwest = "0.11.23"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
