--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.31", features = ["std"] }
-clap = "4.4.12"
+clap = { version = "4.4.12", features = ["derive"] }
 reqwest = "0.11.23"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
