ci: fix call to clippy

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -24,4 +24,4 @@ jobs:
           bins: cargo-make
           components: clippy
       - name: Lint
-        run: cargo make lint
+        run: cargo clippy
