chore: prefer pedantic clippy

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -24,4 +24,4 @@ jobs:
           bins: cargo-make
           components: clippy
       - name: Lint
-        run: cargo clippy -- -D warnings
+        run: cargo clippy -- -D warnings -W clippy::pedantic
