--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 chrono = { version = "0.4.31", features = ["std"] }
 clap = { version = "4.4.12", features = ["derive"] }
 reqwest = "0.11.23"
+sqlite = "0.32.0"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
